swim_common/src/form/tests/derive/form/generic_no_default.stderr
error[E0599]: the method `as_value` exists for struct `S<main::Valid, Skipped>`, but its trait bounds were not satisfied
  --> $DIR/generic_no_default.rs:35:15
   |
24 |     struct S<A, B> {
   |     --------------
   |     |
   |     method `as_value` not found for this
   |     doesn't satisfy `S<main::Valid, Skipped>: Form`
   |     doesn't satisfy `S<main::Valid, Skipped>: StructuralReadable`
   |     doesn't satisfy `S<main::Valid, Skipped>: StructuralWritable`
...
35 |     let _ = s.as_value();
   |               ^^^^^^^^ method cannot be called on `S<main::Valid, Skipped>` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `S<main::Valid, Skipped>: StructuralReadable`
           which is required by `S<main::Valid, Skipped>: Form`
           `S<main::Valid, Skipped>: StructuralWritable`
           which is required by `S<main::Valid, Skipped>: Form`

error[E0277]: the trait bound `B: Default` is not satisfied
  --> $DIR/generic_no_default.rs:23:14
   |
23 |     #[derive(Form, Debug, PartialEq, Clone)]
   |              ^^^^ the trait `Default` is not implemented for `B`
   |
   = note: required by `std::default::Default::default`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider further restricting this bound
   |
23 |     #[derive(Form + std::default::Default, Debug, PartialEq, Clone)]
   |                   ^^^^^^^^^^^^^^^^^^^^^^^
